--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>shopify</title>
     <link rel="stylesheet" href="./app.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <header>
@@ -60,37 +61,47 @@
             </svg>
           </div>
 
-          <div class="user menu_btn pointer">
-            <button>Davil collections</button>
+          <div class="model-info menu_btn pointer">
+            <p>Davil collections</p>
             <button class="status-inidcator">DC</button>
           </div>
         </div>
       </nav>
 
       <!-- Notification list Design -->
-      <div class="menu">
+      <div class="notification menu hidden">
         <div class="justify-between">
           <p class="title">Alerts</p>
           <div class="flex-item">
-           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-              <path d="M3 6C3 5.58579 3.33579 5.25 3.75 5.25H16.25C16.6642 5.25 17 5.58579 17 6C17 6.41421 16.6642 6.75 16.25 6.75H3.75C3.33579 6.75 3 6.41421 3 6Z" fill="#616161"/>
-              <path d="M6.75 14C6.75 13.5858 7.08579 13.25 7.5 13.25H12.5C12.9142 13.25 13.25 13.5858 13.25 14C13.25 14.4142 12.9142 14.75 12.5 14.75H7.5C7.08579 14.75 6.75 14.4142 6.75 14Z" fill="#616161"/>
-              <path d="M5.5 9.25C5.08579 9.25 4.75 9.58579 4.75 10C4.75 10.4142 5.08579 10.75 5.5 10.75H14.5C14.9142 10.75 15.25 10.4142 15.25 10C15.25 9.58579 14.9142 9.25 14.5 9.25H5.5Z" fill="#616161"/>
-            </svg>
-            
-            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-              <path d="M13.2803 9.03033C13.5732 8.73744 13.5732 8.26256 13.2803 7.96967C12.9874 7.67678 12.5126 7.67678 12.2197 7.96967L9.25 10.9393L8.03033 9.71967C7.73744 9.42678 7.26256 9.42678 6.96967 9.71967C6.67678 10.0126 6.67678 10.4874 6.96967 10.7803L8.71967 12.5303C9.01256 12.8232 9.48744 12.8232 9.78033 12.5303L13.2803 9.03033Z" fill="#616161"/>
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M17 10C17 13.866 13.866 17 10 17C6.13401 17 3 13.866 3 10C3 6.13401 6.13401 3 10 3C13.866 3 17 6.13401 17 10ZM15.5 10C15.5 13.0376 13.0376 15.5 10 15.5C6.96243 15.5 4.5 13.0376 4.5 10C4.5 6.96243 6.96243 4.5 10 4.5C13.0376 4.5 15.5 6.96243 15.5 10Z" fill="#616161"/>
-            </svg>
+            <a href="#" class="alertIcon">
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+                 <path d="M3 6C3 5.58579 3.33579 5.25 3.75 5.25H16.25C16.6642 5.25 17 5.58579 17 6C17 6.41421 16.6642 6.75 16.25 6.75H3.75C3.33579 6.75 3 6.41421 3 6Z" fill="#616161"/>
+                 <path d="M6.75 14C6.75 13.5858 7.08579 13.25 7.5 13.25H12.5C12.9142 13.25 13.25 13.5858 13.25 14C13.25 14.4142 12.9142 14.75 12.5 14.75H7.5C7.08579 14.75 6.75 14.4142 6.75 14Z" fill="#616161"/>
+                 <path d="M5.5 9.25C5.08579 9.25 4.75 9.58579 4.75 10C4.75 10.4142 5.08579 10.75 5.5 10.75H14.5C14.9142 10.75 15.25 10.4142 15.25 10C15.25 9.58579 14.9142 9.25 14.5 9.25H5.5Z" fill="#616161"/>
+               </svg>
+            </a>
+
+            <a href="#" class="alertIcon">
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none" >
+                <path d="M13.2803 9.03033C13.5732 8.73744 13.5732 8.26256 13.2803 7.96967C12.9874 7.67678 12.5126 7.67678 12.2197 7.96967L9.25 10.9393L8.03033 9.71967C7.73744 9.42678 7.26256 9.42678 6.96967 9.71967C6.67678 10.0126 6.67678 10.4874 6.96967 10.7803L8.71967 12.5303C9.01256 12.8232 9.48744 12.8232 9.78033 12.5303L13.2803 9.03033Z" fill="#616161"/>
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M17 10C17 13.866 13.866 17 10 17C6.13401 17 3 13.866 3 10C3 6.13401 6.13401 3 10 3C13.866 3 17 6.13401 17 10ZM15.5 10C15.5 13.0376 13.0376 15.5 10 15.5C6.96243 15.5 4.5 13.0376 4.5 10C4.5 6.96243 6.96243 4.5 10 4.5C13.0376 4.5 15.5 6.96243 15.5 10Z" fill="#616161"/>
+              </svg>
+            </a>
+
+          </div>
+        </div>
+        <div class="model-info">
+          <div class="titlebar">
+            <p>Alerts about your store and account will show here</p>
           </div>
         </div>
       </div>
 
       <!-- Menu list design -->
-      <div class="menu hidden">
+      <div class="menu-list menu hidden">
         <div class="container">
           <div class="titlebar justify-between">
-            <div class="user pointer">
+            <div class="model-info pointer">
               <button class="status-inidcator">DC</button>
               <button>Davil collections</button>
             </div>
@@ -122,13 +133,14 @@
       </div>
     </header>
 
+    <!-- Body -->
     <div class="content">
       <div class="content-header">
         <div>
           <p>Extend your trial for $1/month for 3months on select plans</p>
         </div>
         <div class="action">
-          <button class="pointer">Select a plan</button>
+          <button class="select-plan-desktop">Select a plan</button>
           <svg
             width="20"
             height="20"
@@ -142,6 +154,7 @@
             />
           </svg>
         </div>
+        <button class="select-plan-mobile hidden">Select a plan</button>
       </div>
       <div class="content-body">
         <div class="justify-between">
@@ -171,10 +184,39 @@
           </div>
         </div>
 
+
         <!------- Redering cards here----- -->
         <div class="card-container open-model"></div>
+
       </div>
     </div>
+    
+  
+
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="desc">
+      <div class="flex-item">
+        A<h1 class="title">A</h1>
+      </div>
+      <div class="flex-item">
+        <i class="fa fa-lock"></i> &nbsp;
+        <p>Admin.shopify.com</p>
+      </div>
+      <i class="fa fa-rotate-right"></i>
+    </div>
+      <div class="icons">
+        <i class="fa fa-angle-left"></i>
+         <i class="fa fa-angle-right"></i>
+          <i class="fa fa-clone"></i>
+          <i class="fa fa-rotate-right"></i>
+      </div>
+
+      <div class="line">
+        <div class="layer"></div>
+      </div>
+    </footer>
+
 
     <script src="./app.js"></script>
   </body>
